# crajybot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Horoscope_bot.py  README.md  TOKEN.py.save  bot-script.py  bot.py  botTrial.py  crajybot.sql  docker-compose.yml  economy-code.py  economy-data.json  horo-data.json  horoscope-code.py  horoscope-functions.py  json_to_mongo.py  manage.py  pyproject.toml  requirements.txt  rpg-data.json  schema.prisma  store-data.json  test.py  testing.py  testing.txt  testing_trials.py  tictactoe.py  tox.ini
.github/: dependabot.yml
.github/workflows/: python-app.yml
app_cmds/: __init__.py  birthday.py  note.py  transformers.py
cogs/: amongus.py  battle.py  betting.py  birthday.py  economy.py  eval.py  games.py  metrics.py  minecraft.py  moderator.py  notes.py  slash.py  stupid.py  stupid.py.save  tags.py
exts/code/: __init__.py  code_snippets.py  issue_linking.py
exts/exclusive/: __init__.py  betting.py  economy.py
exts/fun/: __init__.py  birthday.py  stupid.py
exts/games/: __init__.py  amongus.py  games.py
exts/utility/: __init__.py  eval.py  misc.py  moderator.py  notes.py  tags.py
internal/: bot.py  context.py  decorators.py  enumerations.py  help_class.py
legacy/: battle  metrics  minecraft
logic/: birthday.py  notes.py  tags.py
migrations/20220316112734_initial/: migration.sql
migrations/20220316123339_add_bot_channel/: migration.sql
migrations/20220316123448_nullable_bot_channel/: migration.sql
migrations/20220316161400_add_reminder_time/: migration.sql
migrations/20220316164717_add_created_at_notes/: migration.sql
migrations/20220318045749_add_birthdate/: migration.sql
utils/: converters.py  decorators.py  embed.py  embed.py.save  graphing.py  help_class.py  menu.py  tictactoe.py  timezone.py
