[tool.poetry]
name = "crajybot"
version = "0.1.0"
description = "Crajy Discord Bot"
authors = ["Anand Krishna <anandkrishna2312@gmail.com>"]
license = "GPL-3"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.3"
discord-ext-menus = {git = "https://github.com/Rapptz/discord-ext-menus.git"}
"akinator.py" = {extras = ["async"], version = "5.0.0"}
pytz = "^2021.1"
yarl = "1.4.2"
jishaku = "^1.20.0"
asyncpg = "^0.22.0"
aioscheduler = "^1.4.2"
python-dotenv = "^0.15.0"
more-itertools = "^8.7.0"
prisma = "^0.6.3"
"discord.py" = {git = "https://github.com/Rapptz/discord.py.git"}

[tool.poetry.dev-dependencies]
pre-commit = "^2.10.1"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
