[tool.poetry]
name = "crajybot"
version = "0.1.0"
description = "Crajy Discord Bot"
authors = ["Anand Krishna <anandkrishna2312@gmail.com>"]
license = "GPL-3"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.7.3"
discord-ext-menus = {git = "https://github.com/Rapptz/discord-ext-menus.git"}
akinator = {extras = ["async"], version = "1.0.3"}
pytz = "^2021.1"
yarl = "1.9.2"
aioscheduler = "^1.4.2"
more-itertools = "^8.7.0"
prisma = "^0.6.3"
"discord.py" = "2.2.3"
loguru = "^0.6.0"
jishaku = "2.5.1"

[tool.poetry.dev-dependencies]
pre-commit = "^3.3"
black = "^23.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
